[package]
name = "mangata-node"
version = "0.1.0"
authors = ["Mangata Team"]
license = "Unlicense"
repository.workspace = true
edition.workspace = true
build = "build.rs"
publish = false

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
log = "0.4.20"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = "0.3.28"
hex = "0.4.0"

# Local
common-runtime ={ path = "../runtime/common"}
mangata-kusama-runtime ={ path = "../runtime/mangata-kusama"}
mangata-rococo-runtime ={ path = "../runtime/mangata-rococo"}
xyk-rpc = { path = "../pallets/xyk/rpc" }
xyk-runtime-api = { path = "../pallets/xyk/runtime-api" }

# Substrate
frame-benchmarking = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
frame-benchmarking-cli = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
pallet-transaction-payment-mangata-rpc = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-basic-authorship-ver = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-chain-spec = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-cli = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-client-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-consensus = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-executor = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-network = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-network-sync = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-offchain = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-rpc = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-service = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-sysinfo = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-telemetry = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-tracing = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-transaction-pool = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-transaction-pool-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-block-builder = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-blockchain = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-consensus-aura = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-io = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-keystore = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-offchain = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-session = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-timestamp = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-transaction-pool = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-ver = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", features = ["helpers"] }
substrate-frame-rpc-system = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
ver-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

# Polkadot
polkadot-cli = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
polkadot-primitives = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
xcm = { package = "staging-xcm", git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-client-collator = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-client-consensus-aura = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-client-consensus-common = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-client-consensus-proposer = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-client-service = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-primitives-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-relay-chain-interface = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
color-print = "0.3.4"

[dev-dependencies]
tempfile = "3.8.0"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

[features]
default = []
# default = ["mangata-kusama", "mangata-rococo"]
mangata-kusama = [
	"mangata-kusama-runtime/std",
	"xyk-rpc/std",
	"polkadot-cli/kusama-native",
]
mangata-rococo = [
	"mangata-rococo-runtime/std",
	"xyk-rpc/std",
	"polkadot-cli/rococo-native",
]
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"mangata-kusama-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"mangata-kusama-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]
network-protocol-staging = [
	"cumulus-client-service/network-protocol-staging",
	"polkadot-cli/network-protocol-staging",
]
