[package]
name = "mangata-node"
version = "0.1.0"
authors = ["Mangata Team"]
edition = "2018"
license = "Unlicense"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

[[bin]]
name = "mangata-node"
path = "bin/main.rs"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
color-print = "0.3.4"
futures = "0.3.28"
jsonrpsee = { version = "0.16.2", features = ["server"] }
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
hex = "0.4.0"
hex-literal = "0.3.4"

# Local Dependencies
common-runtime = { path = "../runtime/common", default-features = false, version = "4.0.0" }
mangata-kusama-runtime = { path = "../runtime/mangata-kusama", optional = true }
mangata-rococo-runtime = { path = "../runtime/mangata-rococo", optional = true }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
frame-benchmarking-cli = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
frame-system = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
mangata-types = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
pallet-transaction-payment-mangata = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
pallet-transaction-payment-mangata-rpc = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
try-runtime-cli = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", optional = true }

substrate-frame-rpc-system = { package = "mangata-rpc-nonce", path = "../rpc/nonce" }

## Substrate Client Dependencies
sc-basic-authorship-ver = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-chain-spec = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-cli = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-client-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-consensus = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-consensus-aura = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-consensus-grandpa = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-executor = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-keystore = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-network = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-network-common = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-network-light = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-network-sync = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-network-bitswap = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-rpc = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-rpc-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-service = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-sysinfo = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-telemetry = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-transaction-pool = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-transaction-pool-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-tracing = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-block-builder = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-blockchain = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-consensus = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-consensus-aura = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-inherents = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-io = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-keyring = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-keystore = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-offchain = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-session = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-storage = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-timestamp = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-transaction-pool = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-trie = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-ver = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", features = ["helpers"] }
ver-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
# cumulus-client-collator = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = mdevelop }
cumulus-client-consensus-aura = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-client-consensus-common = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-client-network = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-client-service = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-primitives-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-relay-chain-interface = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
polkadot-parachain-primitives = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
polkadot-primitives = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
polkadot-service = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
polkadot-test-service = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
xcm = { package = "staging-xcm", git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

# Mangata dependencies
xyk-rpc = { default-features = false, version = "2.0.0", path = "../pallets/xyk/rpc" }
xyk-runtime-api = { default-features = false, version = "2.0.0", path = "../pallets/xyk/runtime-api" }

[dev-dependencies]
cfg-if = "1.0.0"
futures = "0.3.21"
tokio = { version = "1.15", features = ["macros", "time"] }

sub-tokens = { git = "https://github.com/paritytech/substrate-debug-kit", branch = "master" }

cumulus-pallet-parachain-system = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
extrinsic-shuffler = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
frame-system = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
frame-system-rpc-runtime-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
pallet-timestamp = { git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false, branch = "develop" }
pallet-transaction-payment-mangata = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
polkadot-runtime-common = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-block-builder = { package = "sc-block-builder-ver", git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-consensus-slots = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", features = ["full_crypto"] }
sp-keyring = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-tracing = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false }

[features]
default = ["mangata-kusama", "mangata-rococo"]
mangata-kusama = [
	"mangata-kusama-runtime/std",
	"xyk-rpc/std",
	"polkadot-cli/kusama-native",
]
mangata-rococo = [
	"mangata-rococo-runtime/std",
	"xyk-rpc/std",
	"polkadot-cli/rococo-native",
]
#disable-execution = ["mangata-kusama-runtime/disable-execution"]
runtime-benchmarks = ["mangata-kusama-runtime/runtime-benchmarks", "polkadot-cli/runtime-benchmarks", "polkadot-test-service/runtime-benchmarks"]
fast-runtime = ["common-runtime/fast-runtime", "mangata-kusama-runtime/fast-runtime", "mangata-kusama-runtime/fast-runtime"]
try-runtime = [
	"mangata-kusama-runtime/try-runtime",
	"mangata-rococo-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
	"polkadot-cli/try-runtime",
	"polkadot-service/try-runtime",
	"sp-runtime/try-runtime",
]
