[package]
name = "mangata-runtime"
version = "2.0.0"
authors = ["Mangata Team"]
edition = "2018"
license = "Unlicense"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"

pallet-aura = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-grandpa = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-sudo = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-transaction-payment = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-executive = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false, version = "3.0.0"}
sp-consensus-aura = { version = "0.9.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-inherents = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false, version = "3.0.0"}
sp-offchain = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-session = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-transaction-pool = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-version = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-treasury = { default-features = false, version='3.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-elections-phragmen = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-collective = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }

pallet-authorship = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-offences = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-staking = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-staking = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-staking-reward-curve = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-session = { version = "3.0.0", features = ["historical"], default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }

# Used for runtime benchmarking
frame-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", optional = true }
frame-system-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", optional = true }
hex-literal = { version = "0.3.1", optional = true }

# local dependencies
pallet-xyk = { path = '../pallets/xyk', default-features = false, version = '0.1.0' }
xyk-runtime-api = { path = '../pallets/xyk/runtime-api', default-features = false, version = '2.0.0' }
mangata-primitives = { path = '../primitives/mangata', default-features = false, version = "0.1.0" }
pallet-assets-info = { path = '../pallets/assets-info', default-features = false, version = '2.0.0' }
pallet-sudo-origin = { path = '../pallets/sudo-origin', default-features = false, version = "2.0.0" }

# thrid party dependencies
orml-tokens = {  default-features = false, version = "0.4.0", git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }
orml-traits = {  default-features = false, version = "0.4.0", git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }

# bridge dependencies
artemis-core = {default-features = false, version = "0.1.1", git = "https://github.com/mangata-finance/snowbridge", branch = "mangata-dev"}
pallet-verifier = {default-features = false, version = "0.1.1", git = "https://github.com/mangata-finance/snowbridge", branch = "mangata-dev"}
artemis-erc20-app = {default-features = false, version = "0.1.1", git = "https://github.com/mangata-finance/snowbridge", branch = "mangata-dev"}
artemis-eth-app = {default-features = false, version = "0.1.1", git = "https://github.com/mangata-finance/snowbridge", branch = "mangata-dev"}
artemis-asset = {default-features = false, version = "0.1.1", git = "https://github.com/mangata-finance/snowbridge", branch = "mangata-dev"}
pallet-bridge = {default-features = false, version = "0.1.1", path = "../pallets/bridge"}

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-assets-info/std",
	'orml-tokens/std',
	'orml-traits/std',
    "pallet-xyk/std",
    "xyk-runtime-api/std",
	"pallet-treasury/std",
    "mangata-primitives/std",
	"pallet-sudo-origin/std",
	"pallet-collective/std",
	"pallet-elections-phragmen/std",
	"artemis-core/std",
	"pallet-verifier/std",
	"artemis-erc20-app/std",
	"artemis-eth-app/std",
	"artemis-asset/std",
	"pallet-bridge/std",
	"pallet-authorship/std",
	"pallet-offences/std",
	"sp-staking/std",
	"pallet-staking/std",
	"pallet-session/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
